--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,8 +2,10 @@ upstream unicorn {
   server unix:/tmp/unicorn.skaut_jurajski.sock fail_timeout=0;
 }
 
+server_names_hash_bucket_size 64;
+
 server {
-  listen 80 default deferred;
+  # listen 80 default deferred;
 
   server_name skautjurajski.pl www.skautjurajski.pl;
   root /home/deploy/apps/skaut_jurajski/current/public;
